fix placeholders etc

--- a/dev/blocks/button/button.sass
+++ b/dev/blocks/button/button.sass
@@ -23,3 +23,8 @@
 
 .button_submit
   width: 75px
+
+@media screen and (max-width: 580px)
+  .button_more
+    position: static
+    margin-bottom: 20px
