--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -9,6 +9,9 @@
 .menu-btn
   display: none
 
+.icon-menu
+  cursor: pointer
+
 .menu
   margin: 0
   height: 78px
@@ -52,7 +55,7 @@
   .menu-item a
     font-size: 15px
 
-@media screen and (max-width: 480px)
+@media screen and (max-width: 500px)
   .menu
     height: 60px
 
@@ -62,7 +65,7 @@
   .menu-item a
     font-size: 14px
 
-@media screen and (max-width: 420px)
+@media screen and (max-width: 440px)
   .navbar
     flex-direction: column
 
