--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -27,12 +27,15 @@
                             ".9L10.928 0l8.036 7.999L27 15.997 18.944 24l-8.057 8-2.936-2.916z")
             .blog__text
                 .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                    .blog__info-meta
+                        .blog__info-title date
+                        .blog__info-text april 15, 2012
+                    .blog__info-meta
+                        .blog__info-title tags
+                        .blog__info-text website | design
+                    .blog__info-meta
+                        .blog__info-title comments
+                        .blog__info-text 2
                 .blog__article
                     a.blog__post-link(href="post.html")
                         h2.blog__header top wordpress themes of 2012
@@ -54,12 +57,15 @@
                 img(src="img/jesus.png")
             .blog__text
                 .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                    .blog__info-meta
+                        .blog__info-title date
+                        .blog__info-text april 12, 2012
+                    .blog__info-meta
+                        .blog__info-title tags
+                        .blog__info-text photoshop | design
+                    .blog__info-meta
+                        .blog__info-title comments
+                        .blog__info-text 4
                 .blog__article
                     a.blog__post-link(href="post.html")
                         h2.blog__header jesus typography wallpaper giveaway!
@@ -82,12 +88,15 @@
                     webkitallowfullscreen mozallowfullscreen allowfullscreen)
             .blog__text
                 .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                    .blog__info-meta
+                        .blog__info-title date
+                        .blog__info-text march 20, 2012
+                    .blog__info-meta
+                        .blog__info-title tags
+                        .blog__info-text video
+                    .blog__info-meta
+                        .blog__info-title comments
+                        .blog__info-text 3
                 .blog__article
                     h2.blog__header le sommet bleu
                     p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
