--- a/dev/blocks/post/post.pug
+++ b/dev/blocks/post/post.pug
@@ -7,10 +7,10 @@
             .post__info
                 .post__info-meta
                     .post__info-title date
-                    .post__info-text april 15, 2012
+                    .post__info-text april 12, 2012
                 .post__info-meta
                     .post__info-title tags
-                    .post__info-text website | design
+                    .post__info-text photoshop | design
                 .post__info-meta
                     .post__info-title comments
                     .post__info-text 4
