--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -20,6 +20,8 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
   font-size: 12px
   color: #000000
   margin: 0
+  line-height: 1.5
+
 
 @mixin content
   margin: 0 50px 45px 0
