fix line-height again

--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -14,6 +14,7 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
   color: $head-color
   text-transform: uppercase
   font-size: 18px
+  line-height: 1.5
 
 @mixin text
   font-family: "Open Sans", sans-serif
