--- a/dev/blocks/article-preview/article-preview.sass
+++ b/dev/blocks/article-preview/article-preview.sass
@@ -21,7 +21,7 @@
   padding: 5px 0
 
 .article-preview__text
-  font-family: Open Sans, sans-serif
+  @include text
   font-size: 12px
   color: #404040
   margin: 0 20px 85px 2px
