fix title's margins

--- a/dev/blocks/title/title.pug
+++ b/dev/blocks/title/title.pug
@@ -2,4 +2,4 @@
     .sidepane.sidepane_top
     .container.container_flex.sidepane-border
         .title
-            h1.title__header #{pageTitle}
+            h1.title__header=pageTitle
