--- a/dev/blocks/footer/footer.pug
+++ b/dev/blocks/footer/footer.pug
@@ -3,7 +3,8 @@
     .container.sidepane-border
         .footer
             .footer__column
-                h2.footer__header about jetro
+                h2.footer__header
+                    a(href='about.html') about jetro
                 p.footer__text
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda
                     | doloribus incidunt iusto laudantium nihil obcaecati quos? A aliquid consectetur eos, et illum
@@ -29,7 +30,8 @@
                     | Follow
                     span.footer__span @bestpsdfreebies
             .footer__column
-                h2.footer__header contact us
+                h2.footer__header
+                    a(href='contact.html') contact us
                 p.footer__text
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
                     | dolores earum itaque laboriosam, nemo numquam.
