--- a/dev/blocks/footer/footer.sass
+++ b/dev/blocks/footer/footer.sass
@@ -20,6 +20,12 @@
   color: #ffffff
   margin-bottom: 25px
 
+.footer__header a
+  @include header
+  color: #ffffff
+  text-decoration: none
+
+
 .footer__text
   @include text
   color: #ffffff
