--- a/dev/blocks/sidebar/sidebar.pug
+++ b/dev/blocks/sidebar/sidebar.pug
@@ -1,6 +1,7 @@
 .sidebar
     .side.widget.widget_text(id="text-2")
-        h3.widget-title about jetro
+        h3.widget-title
+            a(href='about.html') about jetro
         .textwidget
             p Lorem ipsum dolor sit amet, consetur adipisicing elit. Asperiores aut dignissimos error,
                 |libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus.
@@ -8,14 +9,14 @@
         h3.widget-title categories
         ul
             li.cat-item
-                a(href='#') Video (3)
+                a(href='blog.html') Video (3)
             li.cat-item
-                a(href='#') Sport (5)
+                a(href='blog.html') Sport (5)
             li.cat-item
-                a(href='#') Media (2)
+                a(href='blog.html') Media (2)
             li.cat-item
-                a(href='#') Entartaiment (7)
+                a(href='blog.html') Entartaiment (7)
             li.cat-item
-                a(href='#') Life (4)
+                a(href='blog.html') Life (4)
             li.cat-item
-                a(href='#') Super Coll Stuff (8)
+                a(href='blog.html') Super Coll Stuff (8)
