--- a/dev/blocks/sidebar/sidebar.sass
+++ b/dev/blocks/sidebar/sidebar.sass
@@ -25,6 +25,13 @@
   white-space: nowrap
   font-size: 14px
 
+.widget-title a
+  @include header
+  font-size: 14px
+  text-decoration: none
+
+
+
 .widget-title::after
   content: ""
   display: inline-block
