--- a/dev/blocks/title/title.sass
+++ b/dev/blocks/title/title.sass
@@ -13,3 +13,23 @@
   color: #ffffff
   margin-left: 20px
   margin-top: 16px
+
+@media screen and (max-width: 560px)
+  .title
+    height: 52px
+    margin-bottom: 20px
+
+  .title__header
+    font-size: 20px
+    margin-left: 16px
+    margin-top: 14px
+
+@media screen and (max-width: 480px)
+  .title
+    height: 42px
+    margin-bottom: 18px
+
+  .title__header
+    font-size: 16px
+    margin-left: 14px
+    margin-top: 12px
