--- a/dev/blocks/slider/slider.pug
+++ b/dev/blocks/slider/slider.pug
@@ -5,7 +5,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_1.png', alt='slide')
                 .slider__info
-                    h.slider__header slide one
+                    h2.slider__header slide one
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
@@ -13,7 +13,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_2.png', alt='slide')
                 .slider__info
-                    h.slider__header slide two
+                    h2.slider__header slide two
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
@@ -21,7 +21,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_3.png', alt='slide')
                 .slider__info
-                    h.slider__header slide three
+                    h2.slider__header slide three
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
@@ -29,7 +29,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_4.png', alt='slide')
                 .slider__info
-                    h.slider__header slide four
+                    h2.slider__header slide four
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
@@ -37,7 +37,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_5.png', alt='slide')
                 .slider__info
-                    h.slider__header slide five
+                    h2.slider__header slide five
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
@@ -45,7 +45,7 @@
             .slider__slide
                 img.slider__img(src='img/slide_6.png', alt='slide')
                 .slider__info
-                    h.slider__header slide six
+                    h2.slider__header slide six
                     p.slider__text
                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
