--- a/dev/blocks/post/post.pug
+++ b/dev/blocks/post/post.pug
@@ -2,7 +2,7 @@
     .post
         .post__content
             .post__pic
-                img(src="img/jesus.png")
+                img(src="img/jesus.png" alt="Jesus")
             h2.post__header jesus typography wallpaper giveaway!
             .post__info
                 .post__info-meta
