--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -54,7 +54,7 @@
                 i.blog__icon.icon-doc-text
 
             .blog__pic
-                img(src="img/jesus.png")
+                img(src="img/jesus.png" alt="Jesus")
             .blog__text
                 .blog__info
                     .blog__info-meta
@@ -84,8 +84,7 @@
                 i.blog__icon.icon-play
             .blog__pic
                 .media
-                    iframe(src="https://player.vimeo.com/video/186134953" width="670" height="380" frameborder="0"
-                    webkitallowfullscreen mozallowfullscreen allowfullscreen)
+                    iframe(src="https://player.vimeo.com/video/186134953" width="670" height="380" allowfullscreen)
             .blog__text
                 .blog__info
                     .blog__info-meta
