--- a/dev/blocks/contact/contact.pug
+++ b/dev/blocks/contact/contact.pug
@@ -4,7 +4,7 @@
             iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13852.846015172889!2d-106" +
             ".65278570318729!3d52.13686194923122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13" +
             ".1!5e0!3m2!1sen!2sua!4v1479205291875"
-            width="670" height="400" frameborder="0" allowfullscreen)
+            width="670" height="400" allowfullscreen)
         .feedback
             .feedback__contacts
                 p.feedback__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
