--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -10,3 +10,4 @@ html(lang="en")
                 include ../blocks/title/title
                 include ../blocks/about/about
             include ../blocks/footer/footer
+        include tmpl/sources
