--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -12,3 +12,4 @@ html(lang="en")
                 include ../blocks/article-preview/article-preview
                 include ../blocks/recent/recent
             include ../blocks/footer/footer
+        include tmpl/sources
