--- a/dev/pages/post.pug
+++ b/dev/pages/post.pug
@@ -10,3 +10,4 @@ html(lang="en")
                 include ../blocks/title/title
                 include ../blocks/post/post
             include ../blocks/footer/footer
+        include tmpl/sources
