--- a/dev/blocks/navbar/navbar.pug
+++ b/dev/blocks/navbar/navbar.pug
@@ -7,7 +7,7 @@
         {'name': 'contact us', 'url': 'contact.html'}]
 
 .container.navbar
-    .logo
+    header.logo
         span.logo__first jet
         span.logo__last ro
     nav.menubar
