--- a/dev/blocks/sidebar/sidebar.pug
+++ b/dev/blocks/sidebar/sidebar.pug
@@ -1,4 +1,4 @@
-.sidebar
+aside.sidebar
     .side.widget.widget_text(id="text-2")
         h3.widget-title
             a(href='about.html') about jetro
