--- a/dev/blocks/footer/footer.pug
+++ b/dev/blocks/footer/footer.pug
@@ -1,9 +1,9 @@
 .sidepane-wrapper
     .sidepane.sidepane_bottom
     .container.sidepane-border
-        .footer
+        footer.footer
             .footer__column
-                h2.footer__header
+                span.footer__header
                     a(href='about.html') about jetro
                 p.footer__text
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda
@@ -13,7 +13,7 @@
                     | A aliquid consectetur eos, et illum laboriosam laudantium quaerat quidem
                     | sapiente totam, veritatis?
             .footer__column
-                h2.footer__header twitter widget
+                span.footer__header twitter widget
                 p.footer__text
                     span.footer__span @pixelmater
                     | What an awesome design with
@@ -30,7 +30,7 @@
                     | Follow
                     span.footer__span @bestpsdfreebies
             .footer__column
-                h2.footer__header
+                span.footer__header
                     a(href='contact.html') contact us
                 p.footer__text
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
