--- a/dev/blocks/footer/footer.pug
+++ b/dev/blocks/footer/footer.pug
@@ -35,16 +35,19 @@
                 p.footer__text
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
                     | dolores earum itaque laboriosam, nemo numquam.
+                br
                 p.footer__text
                     | information@jetro.com
                     br
                     | 1.222.333.4444
-                img.footer__social(src='img/facebook.png', alt='Facebook.com')
+                br
+                i.icon.icon-facebook
                 =' '
-                img.footer__social(src='img/twitter.png', alt='Twitter.com')
+                i.icon.icon-twitter
                 =' '
-                img.footer__social(src='img/mail.png', alt='E-Mail')
+                i.icon.icon-mail
                 =' '
-                img.footer__social(src='img/rss.png', alt='RSS')
+                i.icon.icon-rss
                 =' '
-                img.footer__social(src='img/vimeo.png', alt='Vimeo')
+                i.icon.icon-vimeo
+                =' '
