--- a/dev/blocks/footer/footer.sass
+++ b/dev/blocks/footer/footer.sass
@@ -1,4 +1,5 @@
 @import "../mixins"
+@import "../sprite"
 
 .footer
   position: relative
@@ -36,22 +37,27 @@
 .footer__social
   margin-top: 20px
 
+.icon
+  display: inline-block
 
-//@media screen and (max-width: 950px)
-//
+.icon-facebook
+  @include sprite($facebook)
+
+.icon-mail
+  @include sprite($mail)
+
+.icon-vimeo
+  @include sprite($vimeo)
+
+.icon-twitter
+  @include sprite($twitter)
+
+.icon-rss
+  @include sprite($rss)
+
 @media screen and (max-width: 680px)
   .footer
     flex-direction: column
 
   .footer__column
     width: 100%
-
-//@media screen and (max-width: 640px)
-
-//@media screen and (max-width: 560px)
-//
-//@media screen and (max-width: 480px)
-//
-//@media screen and (max-width: 420px)
-//
-//@media screen and (max-width: 380px)
