fixed sprite problem

--- a/dev/blocks/sprite.sass
+++ b/dev/blocks/sprite.sass
@@ -10,110 +10,66 @@
   At the bottom of this section, we provide information about the spritesheet itself
   $spritesheet: width height image $spritesheet-sprites
   */
-$bg-quote-name: 'bg-quote'
-$bg-quote-x: 60px
-$bg-quote-y: 0px
-$bg-quote-offset-x: -60px
-$bg-quote-offset-y: 0px
-$bg-quote-width: 30px
-$bg-quote-height: 30px
-$bg-quote-total-width: 120px
-$bg-quote-total-height: 90px
-$bg-quote-image: '../img/sprite.png'
-$bg-quote: (60px, 0px, -60px, 0px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'bg-quote', )
-$bg-name: 'bg'
-$bg-x: 0px
-$bg-y: 0px
-$bg-offset-x: 0px
-$bg-offset-y: 0px
-$bg-width: 60px
-$bg-height: 60px
-$bg-total-width: 120px
-$bg-total-height: 90px
-$bg-image: '../img/sprite.png'
-$bg: (0px, 0px, 0px, 0px, 60px, 60px, 120px, 90px, '../img/sprite.png', 'bg', )
 $facebook-name: 'facebook'
-$facebook-x: 60px
-$facebook-y: 30px
-$facebook-offset-x: -60px
-$facebook-offset-y: -30px
+$facebook-x: 0px
+$facebook-y: 0px
+$facebook-offset-x: 0px
+$facebook-offset-y: 0px
 $facebook-width: 30px
 $facebook-height: 30px
-$facebook-total-width: 120px
-$facebook-total-height: 90px
+$facebook-total-width: 150px
+$facebook-total-height: 30px
 $facebook-image: '../img/sprite.png'
-$facebook: (60px, 30px, -60px, -30px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'facebook', )
-$h-line-name: 'h_line'
-$h-line-x: 90px
-$h-line-y: 30px
-$h-line-offset-x: -90px
-$h-line-offset-y: -30px
-$h-line-width: 12px
-$h-line-height: 19px
-$h-line-total-width: 120px
-$h-line-total-height: 90px
-$h-line-image: '../img/sprite.png'
-$h-line: (90px, 30px, -90px, -30px, 12px, 19px, 120px, 90px, '../img/sprite.png', 'h_line', )
+$facebook: (0px, 0px, 0px, 0px, 30px, 30px, 150px, 30px, '../img/sprite.png', 'facebook', )
 $mail-name: 'mail'
-$mail-x: 0px
-$mail-y: 60px
-$mail-offset-x: 0px
-$mail-offset-y: -60px
+$mail-x: 30px
+$mail-y: 0px
+$mail-offset-x: -30px
+$mail-offset-y: 0px
 $mail-width: 30px
 $mail-height: 30px
-$mail-total-width: 120px
-$mail-total-height: 90px
+$mail-total-width: 150px
+$mail-total-height: 30px
 $mail-image: '../img/sprite.png'
-$mail: (0px, 60px, 0px, -60px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'mail', )
+$mail: (30px, 0px, -30px, 0px, 30px, 30px, 150px, 30px, '../img/sprite.png', 'mail', )
 $rss-name: 'rss'
-$rss-x: 30px
-$rss-y: 60px
-$rss-offset-x: -30px
-$rss-offset-y: -60px
+$rss-x: 60px
+$rss-y: 0px
+$rss-offset-x: -60px
+$rss-offset-y: 0px
 $rss-width: 30px
 $rss-height: 30px
-$rss-total-width: 120px
-$rss-total-height: 90px
+$rss-total-width: 150px
+$rss-total-height: 30px
 $rss-image: '../img/sprite.png'
-$rss: (30px, 60px, -30px, -60px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'rss', )
-$s-line-name: 's_line'
-$s-line-x: 102px
-$s-line-y: 30px
-$s-line-offset-x: -102px
-$s-line-offset-y: -30px
-$s-line-width: 9px
-$s-line-height: 14px
-$s-line-total-width: 120px
-$s-line-total-height: 90px
-$s-line-image: '../img/sprite.png'
-$s-line: (102px, 30px, -102px, -30px, 9px, 14px, 120px, 90px, '../img/sprite.png', 's_line', )
+$rss: (60px, 0px, -60px, 0px, 30px, 30px, 150px, 30px, '../img/sprite.png', 'rss', )
 $twitter-name: 'twitter'
-$twitter-x: 60px
-$twitter-y: 60px
-$twitter-offset-x: -60px
-$twitter-offset-y: -60px
+$twitter-x: 90px
+$twitter-y: 0px
+$twitter-offset-x: -90px
+$twitter-offset-y: 0px
 $twitter-width: 30px
 $twitter-height: 30px
-$twitter-total-width: 120px
-$twitter-total-height: 90px
+$twitter-total-width: 150px
+$twitter-total-height: 30px
 $twitter-image: '../img/sprite.png'
-$twitter: (60px, 60px, -60px, -60px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'twitter', )
+$twitter: (90px, 0px, -90px, 0px, 30px, 30px, 150px, 30px, '../img/sprite.png', 'twitter', )
 $vimeo-name: 'vimeo'
-$vimeo-x: 90px
+$vimeo-x: 120px
 $vimeo-y: 0px
-$vimeo-offset-x: -90px
+$vimeo-offset-x: -120px
 $vimeo-offset-y: 0px
 $vimeo-width: 30px
 $vimeo-height: 30px
-$vimeo-total-width: 120px
-$vimeo-total-height: 90px
+$vimeo-total-width: 150px
+$vimeo-total-height: 30px
 $vimeo-image: '../img/sprite.png'
-$vimeo: (90px, 0px, -90px, 0px, 30px, 30px, 120px, 90px, '../img/sprite.png', 'vimeo', )
-$spritesheet-width: 120px
-$spritesheet-height: 90px
+$vimeo: (120px, 0px, -120px, 0px, 30px, 30px, 150px, 30px, '../img/sprite.png', 'vimeo', )
+$spritesheet-width: 150px
+$spritesheet-height: 30px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($bg-quote, $bg, $facebook, $h-line, $mail, $rss, $s-line, $twitter, $vimeo, )
-$spritesheet: (120px, 90px, '../img/sprite.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($facebook, $mail, $rss, $twitter, $vimeo, )
+$spritesheet: (150px, 30px, '../img/sprite.png', $spritesheet-sprites, )
 
 /*
   The provided mixins are intended to be used with the array-like variables
