--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -7,8 +7,11 @@ html(lang="en")
         .page-wrapper
             .content
                 include ../blocks/navbar/navbar
-                include ../blocks/slider/slider
-                include ../blocks/thumbs/thumbs
+                .sidepane-wrapper
+                    .sidepane.sidepane_top
+                    .container.sidepane-border
+                        include ../blocks/slider/slider
+                        include ../blocks/thumbs/thumbs
                 include ../blocks/article-preview/article-preview
                 include ../blocks/recent/recent
             include ../blocks/footer/footer
