--- a/dev/blocks/pagination/pagination.pug
+++ b/dev/blocks/pagination/pagination.pug
@@ -1,6 +1,7 @@
-nav.navigation.pagination(role="navigation")
-    h2.screen-reader-text Posts navigation
-    .nav-links
-        span.page-numbers.current 1
-        a.page-numbers(href='#') 2
-        a.page-numbers(href='#') 3
+ul.pagination(role="navigation")
+    li.active
+        a(href='#') 1
+    li
+        a(href='#') 2
+    li
+        a(href='#') 3
