Add post formatting

--- a/dev/blocks/about/about.sass
+++ b/dev/blocks/about/about.sass
@@ -8,12 +8,8 @@
   margin-bottom: 20px
   line-height: 1.5
 
-.about__text.about__quote
-  margin-left: 50px
-  padding-left: 20px
-  font-style: italic
-  color: $quote-color
-  border-left: 8px solid $base-color
+.about__quote
+  @include quote
 
 .about__img
   float: left
