--- a/dev/blocks/thumbs/thumbs.sass
+++ b/dev/blocks/thumbs/thumbs.sass
@@ -3,6 +3,7 @@
   display: flex
   justify-content: space-between
   width: 100%
+  height: 120px
   z-index: 10
   margin-bottom: 35px
 
@@ -16,7 +17,8 @@
   vertical-align: middle
   transition: opacity 200ms
   width: 100%
-  height: 100%
+  height: 120px
+  object-fit: cover
   &:hover
     opacity: 0.5
 
