--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -22,6 +22,13 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
   margin: 0
   line-height: 1.5
 
+@mixin quote
+  margin-left: 50px
+  padding-left: 20px
+  font-style: italic
+  color: $quote-color
+  border-left: 8px solid $base-color
+
 
 @mixin content
   margin: 0 50px 45px 0
