--- a/dev/blocks/post/post.sass
+++ b/dev/blocks/post/post.sass
@@ -48,8 +48,62 @@
 .post__text
   margin-bottom: 40px
 
-.post__text p
-  @include text
+.post__text
+  p
+    @include text
+    margin-bottom: 20px
+  h1
+    @include header
+    margin-top: 40px
+    margin-bottom: 20px
+  h2
+    @include header
+    font-size: 14px
+    margin-top: 30px
+    margin-bottom: 20px
+  h3
+    @include header
+    font-size: 14px
+    font-style: italic
+    margin-top: 30px
+    margin-bottom: 20px
+  h4
+    @include header
+    font-size: 12px
+    margin-top: 20px
+    margin-bottom: 15px
+  h5
+    @include header
+    font-size: 12px
+    font-style: italic
+    margin-top: 20px
+    margin-bottom: 15px
+  strong
+    font-weight: 700
+  hr
+    @include bottom-line
+    margin-top: 20px
+    margin-bottom: 20px
+    border: 0
+  em
+    font-style: italic
+  blockquote
+    @include text
+    @include quote
+    margin-bottom: 20px
+  ul
+    margin-left: 20px
+    margin-bottom: 20px
+    li
+      @include text
+      list-style-type: disc
+  ol
+    margin-left: 20px
+    margin-bottom: 20px
+    li
+      @include text
+      list-style-type: decimal
+
 
 .post__line
   @include bottom-line
