--- a/dev/blocks/sidebar/sidebar.pug
+++ b/dev/blocks/sidebar/sidebar.pug
@@ -1,13 +1,13 @@
 aside.sidebar
-    .side.widget.widget_text(id="text-2")
-        h3.widget-title
+    .widget
+        h3.widget__title
             a(href='about.html') about jetro
         .textwidget
             p Lorem ipsum dolor sit amet, consetur adipisicing elit. Asperiores aut dignissimos error,
                 |libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus.
-    .side.widget.widget_categories(id="categories-3")
-        h3.widget-title categories
-        ul
+    .widget
+        h3.widget__title categories
+        ul.widget__list
             li.cat-item
                 a(href='blog.html') Video (3)
             li.cat-item
@@ -20,3 +20,32 @@ aside.sidebar
                 a(href='blog.html') Life (4)
             li.cat-item
                 a(href='blog.html') Super Coll Stuff (8)
+    .widget
+        h3.widget__title tags
+        .tag-cloud
+            span.tag-cloud__item
+                a(href='blog.html') CSS (3)
+            span.tag-cloud__item
+                a(href='blog.html') Sport (5)
+            span.tag-cloud__item
+                a(href='blog.html') Media (2)
+            span.tag-cloud__item
+                a(href='blog.html') HTML (7)
+            span.tag-cloud__item
+                a(href='blog.html') Life (4)
+            span.tag-cloud__item
+                a(href='blog.html') Java Script (8)
+            span.tag-cloud__item
+                a(href='blog.html') Video (3)
+            span.tag-cloud__item
+                a(href='blog.html') Photo (5)
+            span.tag-cloud__item
+                a(href='blog.html') Audio (2)
+            span.tag-cloud__item
+                a(href='blog.html') Facebook (7)
+            span.tag-cloud__item
+                a(href='blog.html') Science (4)
+            span.tag-cloud__item
+                a(href='blog.html') Git (8)
+            span.tag-cloud__item
+                a(href='blog.html') Web (3)
