--- a/dev/blocks/sidebar/sidebar.sass
+++ b/dev/blocks/sidebar/sidebar.sass
@@ -3,9 +3,6 @@
 .sidebar
   flex: 1
 
-.textwidget
-  margin-bottom: 30px
-
 .textwidget p
   @include text
   margin: 0
@@ -16,23 +13,21 @@
   padding-left: 0
 
 .widget
-  margin-bottom: 15px
+  margin-bottom: 40px
   overflow: hidden
 
-.widget-title
+.widget__title
   @include header
   margin-top: 0
   white-space: nowrap
   font-size: 14px
 
-.widget-title a
+.widget__title a
   @include header
   font-size: 14px
   text-decoration: none
 
-
-
-.widget-title::after
+.widget__title::after
   content: ""
   display: inline-block
   margin-left: 15px
@@ -40,16 +35,30 @@
   width: 100%
   background: url("../img/s_line.png") repeat-x left
 
-.widget_categories ul
+.widget__list
   list-style: none
   padding-left: 0
-
-.cat-item
-  @include text
 
 .cat-item a
   @include text
   text-decoration: none
 
 .cat-item a:hover
+  color: $base-color
+
+.tag-cloud
+  display: flex
+  flex-wrap: wrap
+  align-content: flex-start
+  align-items: center
+
+.tag-cloud__item
+  margin-right: 10px
+  margin-bottom: 4px
+
+.tag-cloud__item a
+  @include text
+  text-decoration: none
+
+.tag-cloud__item a:hover
   color: $base-color
