--- a/dev/blocks/thumbs/thumbs.sass
+++ b/dev/blocks/thumbs/thumbs.sass
@@ -1,15 +1,15 @@
 .thumbs
-  margin-top: 18px
+  margin-top: 10px
   display: flex
   justify-content: space-between
   width: 100%
-  height: 120px
   z-index: 10
   margin-bottom: 35px
 
 .thumbs__thumb
   background: #000000
   margin-right: 10px
+  height: 120px
   &:last-child
     margin-right: 0
 
@@ -22,9 +22,19 @@
   &:hover
     opacity: 0.5
 
-@media screen and (max-width: 950px)
-  .thumbs
-    margin-top: 10px
+@media screen and (max-width: 940px)
+  .thumbs__thumb
+    height: 100px
+
+  .thumbs__img
+    height: 100px
+
+@media screen and (max-width: 780px)
+  .thumbs__thumb
+    height: 80px
+
+  .thumbs__img
+    height: 80px
 
 @media screen and (max-width: 640px)
   .thumbs
@@ -32,10 +42,21 @@
 
   .thumbs__thumb
     margin-right: 8px
+    height: 60px
+
+  .thumbs__img
+    height: 60px
 
 @media screen and (max-width: 560px)
-  .thumbs
-    margin-top: 5px
-
   .thumbs__thumb
-    margin-right: 5px
+    height: 50px
+
+  .thumbs__img
+    height: 50px
+
+@media screen and (max-width: 480px)
+  .thumbs__thumb
+    height: 40px
+
+  .thumbs__img
+    height: 40px
