--- a/dev/pages/tmpl/sources.pug
+++ b/dev/pages/tmpl/sources.pug
@@ -1,2 +1,2 @@
-link(rel="stylesheet" href="css/index.css")
-script(src="js/index.js")
+link(rel="stylesheet" href="css/site.css")
+script(src="js/app.js")
