--- a/dev/blocks/slider/slider.pug
+++ b/dev/blocks/slider/slider.pug
@@ -1,6 +1,6 @@
 .slider
-    .slider__slide
-        img.slider__img(src='img/slide_1.png', alt='slide')
+    .slider__slide.slider__slide_active
+        img.slider__img(src='img/slide_1.png', alt='slide ')
         .slider__info
             h2.slider__header slide one
             p.slider__text
@@ -55,3 +55,16 @@
         svg.slider__btn(width="32" height="32" viewBox="0 0 32 32")
             path(d="M7.951 29.084l-2.936-2.916 5.097-5.088 5.097-5.089-5.104-5.095L5 5.8l2.964-2" +
             ".9L10.928 0l8.036 7.999L27 15.997 18.944 24l-8.057 8-2.936-2.916z")
+.thumbs
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_1.png', alt='slide')
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_2.png', alt='slide')
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_3.png', alt='slide')
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_4.png', alt='slide')
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_5.png', alt='slide')
+    .thumbs__thumb
+        img.thumbs__img(src='img/slide_6.png', alt='slide')
