Remove more of lodash packages

--- a/dev/blocks/sidebar/sidebar.pug
+++ b/dev/blocks/sidebar/sidebar.pug
@@ -6,7 +6,7 @@ aside.sidebar
     .widget
         h3.widget__title
             a(href='about.html') about jetro
-        .textwidget
+        .widget__text
             p Lorem ipsum dolor sit amet, consetur adipisicing elit. Asperiores aut dignissimos error,
                 |libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus.
     .widget
