--- a/dev/blocks/sidebar/sidebar.sass
+++ b/dev/blocks/sidebar/sidebar.sass
@@ -3,10 +3,6 @@
 .sidebar
   flex: 1
 
-.textwidget p
-  @include text
-  margin: 0
-
 .sidebar__list
   @include text
   list-style: none
@@ -34,6 +30,10 @@
   height: 14px
   width: 100%
   background: url("../img/s_line.png") repeat-x left
+
+.widget__text p
+  @include text
+  margin: 0
 
 .link-list
   list-style: none
@@ -90,11 +90,11 @@
 .popup-box__triangle
   transform: rotate(45deg)
   position: relative
-  top: -6px
-  left: 10px
+  top: 10px
+  left: -6px
   height: 10px
   width: 10px
-  border-top: 1px solid #aaa
   border-left: 1px solid #aaa
+  border-bottom: 1px solid #aaa
   background: #fff
-  z-index: 50;
+  z-index: 50
