--- a/dev/blocks/contact/contact.pug
+++ b/dev/blocks/contact/contact.pug
@@ -18,5 +18,8 @@
                 p.feedback__text <span>t:</span> (888) 842 - 8356
                 p.feedback__text <span>f:</span> (888) 452 - 9257
                 p.feedback__text <span>e:</span> info@freebies.com
-            include ../form/form
+            .feedback__form 
+                div.feedback__message
+                    span Your message was sent
+                include ../form/form
     include ../sidebar/sidebar
