--- a/dev/blocks/form/form.sass
+++ b/dev/blocks/form/form.sass
@@ -1,9 +1,9 @@
 @import "../mixins"
 
 .form
-  flex: 2
   display: flex
   flex-direction: column
+  position: relative
 
 .form__textarea, .form__text
   outline: none
@@ -26,12 +26,39 @@
   line-height: 22px
 
 .form__text
+  @include input
   height: 34px
-  width: 215px
-  margin-bottom: 10px
 
 .form__textarea
   overflow: auto
   resize: none
-  margin-bottom: 5px
+  margin-bottom: 10px
   padding: 10px
+
+.form__text:focus + .form__label
+  opacity: 1
+
+.form__label
+  opacity: 0
+  position: relative
+  border-radius: 1px
+  @include header
+  padding: 10px 8px 6px
+  margin-left: 25px
+  font-size: 12px
+  background: $base-color
+  color: $alt-text-color
+  z-index: 1
+
+.form__label:before
+  content: ''
+  position: absolute
+  height: 4px
+  width: 4px
+  left: -10px
+  top: 4px
+  border-radius: 1px
+  background: inherit
+  padding: 8px
+  transform: rotate(45deg)
+  z-index: -1
