--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -1,6 +1,8 @@
 $base-color: #e8603a
 $pale-color: #f2af9e
 $head-color: #e7663c
+$text-color: #000000
+$alt-text-color: #ffffff
 $quote-color: #5a5a5a
 $noactive-color: #b9b9b9
 $menu-bd-color: #dddddd
@@ -18,9 +20,15 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
 @mixin text
   font-family: "Open Sans", sans-serif
   font-size: 12px
-  color: #000000
+  color: $text-color
   margin: 0
   line-height: 1.5
+
+@mixin input
+  width: 215px
+  margin-bottom: 10px
+  @media screen and (max-width: 840px)
+    width: calc(100% - 160px)
 
 @mixin quote
   margin-left: 50px
