File system restructure

--- a/dev/blocks/about/about.pug
+++ b/dev/blocks/about/about.pug
@@ -44,4 +44,4 @@
             |laboriosam nemo nostrum odit, officia reiciendis sint vitae voluptatem. Aliquid aperiam consequatur,
             |cumque cupiditate est impedit iure, labore minima nobis optio qui sequi soluta, tempora veniam vitae
             |voluptates voluptatibus.
-    include ../sidebar/sidebar
+    include ../../components/sidebar/sidebar
