--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -129,4 +129,4 @@
                             | facilis impedit laudantium magnam minus nesciunt nihil nobis.
             .blog__line
         include ../pagination/pagination
-    include ../sidebar/sidebar
+    include ../../components/sidebar/sidebar
