--- a/dev/blocks/contact/contact.pug
+++ b/dev/blocks/contact/contact.pug
@@ -21,5 +21,5 @@
             .feedback__form 
                 div.feedback__message
                     span Your message was sent
-                include ../form/form
-    include ../sidebar/sidebar
+                include ../../components/form/form
+    include ../../components/sidebar/sidebar
