--- a/dev/blocks/post/post.pug
+++ b/dev/blocks/post/post.pug
@@ -44,4 +44,4 @@
                     | facilis impedit laudantium.
             .post__line
             include ../post-navigation/post-navigation
-        include ../sidebar/sidebar
+    include ../../components/sidebar/sidebar
