--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -6,7 +6,7 @@ html(lang="en")
     body
         .page-wrapper
             .content
-                include ../blocks/navbar/navbar
+                include ../components/navbar/navbar
                 include ../blocks/title/title
                 include ../blocks/about/about
             include ../blocks/footer/footer
