--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -6,11 +6,11 @@ html(lang="en")
     body
         .page-wrapper
             .content
-                include ../blocks/navbar/navbar
+                include ../components/navbar/navbar
                 .sidepane-wrapper
                     .sidepane.sidepane_top
                     .container.sidepane-border
-                        include ../blocks/slider/slider
+                        include ../components/slider/slider
                 include ../blocks/article-preview/article-preview
                 include ../blocks/recent/recent
             include ../blocks/footer/footer
