--- a/dev/pages/portfolio.pug
+++ b/dev/pages/portfolio.pug
@@ -6,7 +6,7 @@ html(lang="en")
     body
         .page-wrapper
             .content
-                include ../blocks/navbar/navbar
+                include ../components/navbar/navbar
                 include ../blocks/title/title
                 include ../blocks/portfolio/portfolio
             include ../blocks/footer/footer
